# marawa-prototype

./: .gitignore  AGENTS.md  README.md  package-lock.json  railpack.json  railway.toml  requirements.txt
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260608_0001_initial_schema.py  20260617_0002_dataset_scoped_terms.py  20260617_0003_identity_auth.py  20260617_0004_review_audit.py  20260715_0005_story_completeness.py  20260721_0006_trope_confirmation_status.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  router.py
backend/app/compute/: __init__.py  embeddings.py  job_runner.py  vector_index.py
backend/app/core/: __init__.py  config.py  coordinates.py  csv_schema.py  parsing.py  projection.py
backend/app/db/: __init__.py  base.py  init.py  models.py  session.py
backend/app/services/: __init__.py  audit.py  auth.py  csv_io.py  curation.py  dataset.py  exploration.py  health.py  jobs.py  keywords.py  reviews.py  search_service.py  (+3 more)
backend/tests/: auth_helpers.py  conftest.py  search_fakes.py  test_audit_log.py  test_auth_api.py  test_config.py  test_core_parsing.py  test_csv_io.py  test_curation_api.py  test_dataset_api.py  test_db_schema.py  test_exploration_api.py  test_exploration_parsing.py  test_frontend_static.py  test_health.py  test_jobs_api.py  test_jobs_runner.py  test_keywords_api.py  test_postgres_smoke.py  test_rbac.py  test_review_api.py  test_search_api.py  test_search_service.py  test_stories_api.py  test_tropes_api.py  test_visualizations_api.py
(+59 files in other folders)
