[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marawa-backend"
version = "0.1.0"
description = "Backend service for the Marawa oral mythology workbench."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "numpy>=1.26,<3.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sentence-transformers>=3.0,<4.0",
  "pytest>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]

[tool.setuptools.packages.find]
include = ["app*"]
